Remove contact-form from the site-header partial (since it doesn't seem like a logical place for a modal to exist).

--- a/_layouts/experience.html
+++ b/_layouts/experience.html
@@ -28,6 +28,8 @@
 
     {% include site-header.html %}
 
+    {% include contact-form.html %}
+
     <div
       id="container-experience"
       class="main"
