--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -23,7 +23,11 @@
     </script>
   </head>
   <body>
-    {% include login.html %} {% include contact-form.html %}
+
+    {% include login.html %}
+
+    {% include contact-form.html %}
+
     <div class="main">
 
       <div id="tenant-service-modal" class="service-detail">
