--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -23,6 +23,8 @@
 
       {% include site-header.html %}
 
+      {% include contact-form.html %}
+
       <div id="container-listings">
 
         <div class="content">
