--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -14,6 +14,8 @@
 
       {% include site-header.html %}
 
+      {% include contact-form.html %}
+
       {% include nav-modal.html active-section="about" %}
 
       <div class="info">
