--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -272,9 +272,7 @@
                       <ul class="menu__list">
                         {% for unit in page.availabilities %}
 
-                          <li
-                            class="menu__item"
-                          >
+                          <li  class="menu__item">
                             {{ unit }}
                           </li>
 
@@ -296,9 +294,7 @@
                       <ul class="menu__list">
                         {% for unit in page.highlights %}
 
-                          <li
-                            class="menu__item"
-                          >
+                          <li class="menu__item">
                             {{ unit }}
                           </li>
 
@@ -320,9 +316,7 @@
                       <ul class="menu__list">
                         {% for unit in page.amenities %}
 
-                          <li
-                            class="menu__item"
-                          >
+                          <li class="menu__item">
                             {{ unit }}
                           </li>
 
