--- a/_layouts/listings.html
+++ b/_layouts/listings.html
@@ -308,9 +308,7 @@
               id="listings-next"
               class="navigate-page scroll-listings-top"
             >
-              <div
-                class="navigation-arrow-right navigation-arrows"
-              ></div>
+              <div class="navigation-arrow-right navigation-arrows"></div>
             </div>
 
           </div>
