--- a/_sass/agent-card.scss
+++ b/_sass/agent-card.scss
@@ -9,7 +9,7 @@
   border: 1px solid #c7c7c7;
   @include mobile {
     width: 100%;
-    max-width: auto;
+    max-width: none;
     margin: 5px 0;
   }
 
