- Increase the gutter on the about page - Restore removed style from contact us link on index page

--- a/_sass/index.scss
+++ b/_sass/index.scss
@@ -166,6 +166,7 @@ a {
         align-items: center;
         padding: 6px;
         cursor: pointer;
+        text-decoration: none;
         &:hover {
           > * {
             text-decoration: underline;
