--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -1,10 +1,12 @@
 #about-container {
   $about-page-gutter: 60px;
-  $about-page-gutter-mobile: 10px;
+  $about-page-gutter-mobile: 16px;
   // TODO: fix mobile footer and remove
   overflow: hidden;
   .section-header {
-    text-align: center;
+    @include mobile {
+      text-align: center;
+    }
   }
 
   .info {
