--- a/_includes/agent-modal.html
+++ b/_includes/agent-modal.html
@@ -9,9 +9,7 @@
 		<div class="hero">
 
 			<div class="hero__avatar">
-				<img
-					src="{{ include.agent.avatar }}"
-				/>
+				<img src="{{ include.agent.avatar }}" />
 			</div>
 
 			<div class="hero__text">
