Make the navigation (which link selected) logic a little more fool-proof by relying on an ID (instead of obliterating the class list of pointless nested div).

--- a/_includes/nav-modal.html
+++ b/_includes/nav-modal.html
@@ -1,76 +1,77 @@
-<div class="nav-modal">
-	<div class="active-section-{{ include.active-section }}">
+<div
+	id="active-section-{{ include.active-section }}"
+	class="nav-modal"
+>
 
-		<img
-			src="/images/logo.png"
-			class="modal-logo"
-		/>
+	<img
+		src="/images/logo.png"
+		class="modal-logo"
+	/>
 
-		<div class="menu-close"></div>
+	<div class="menu-close"></div>
 
-		<ul class="nav ham-nav">
+	<ul class="nav ham-nav">
 
-			<li>
-				<a
-					href="/"
-					class="link-home"
-				>
-					HOME
-				</a>
-			</li>
+		<li>
+			<a
+				href="/"
+				class="link-home"
+			>
+				HOME
+			</a>
+		</li>
 
-			<li>
-				<a
-					href="/#services"
-					class="link-services services-home-button"
-				>
-					SERVICES
-				</a>
-			</li>
+		<li>
+			<a
+				href="/#services"
+				class="link-services services-home-button"
+			>
+				SERVICES
+			</a>
+		</li>
 
-			<li>
-				<a
-					href="/listings.html"
-					class="link-listings"
-				>
-					LISTINGS
-				</a>
-			</li>
+		<li>
+			<a
+				href="/listings.html"
+				class="link-listings"
+			>
+				LISTINGS
+			</a>
+		</li>
 
-			<li>
-				<a
-					href="/experience.html"
-					class="link-experience"
-				>
-					EXPERIENCE
-				</a>
-			</li>
+		<li>
+			<a
+				href="/experience.html"
+				class="link-experience"
+			>
+				EXPERIENCE
+			</a>
+		</li>
 
-			<li>
-				<a
-					href="/about.html"
-					class="link-about"
-				>
-					ABOUT
-				</a>
-			</li>
+		<li>
+			<a
+				href="/about.html"
+				class="link-about"
+			>
+				ABOUT
+			</a>
+		</li>
 
-			<li>
-				<a
-					href="https://ws.onehub.com/"
-					target="_blank"
-				>
-					CLIENT ACCESS
-				</a>
-			</li>
+		<li>
+			<a
+				href="https://ws.onehub.com/"
+				target="_blank"
+			>
+				CLIENT ACCESS
+			</a>
+		</li>
 
-			<li>
-				<a class="contact-us-link">
-					CONTACT
-				</a>
-			</li>
+		<li>
+			<a class="contact-us-link">
+				CONTACT
+			</a>
+		</li>
 
-		</ul>
+	</ul>
 
-	</div>
 </div>
