Apply style guide to the newsletter.

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -109,8 +109,7 @@
 
           <img
             id="header-logo"
-            src="images/home-logo.png"
-            alt=""
+            src="/images/home-logo.png"
           />
 
           <div id="header-text">
@@ -120,7 +119,7 @@
         </div>
 
         <img
-          src="images/scroll-arrow.png"
+          src="/images/scroll-arrow.png"
           class="scroll-arrow"
         />
 
@@ -214,8 +213,8 @@
                 </div>
 
                 <div
-                  class="btn-learn-more btn-services"
                   id="tenant-service-modal-button"
+                  class="btn-learn-more btn-services"
                 >
                   LEARN MORE
                 </div>
@@ -233,8 +232,8 @@
                 </div>
 
                 <div
-                  class="btn-learn-more btn-services"
                   id="landlord-service-modal-button"
+                  class="btn-learn-more btn-services"
                 >
                   LEARN MORE
                 </div>
@@ -252,8 +251,8 @@
                 </div>
 
                 <div
-                  class="btn-learn-more btn-services"
                   id="investment-service-modal-button"
+                  class="btn-learn-more btn-services"
                 >
                   LEARN MORE
                 </div>
@@ -277,7 +276,7 @@
 
                     <div>
                       <img
-                        src="images/phone-icon.png"
+                        src="/images/phone-icon.png"
                         class="icon-small"
                       />
                     </div>
@@ -291,7 +290,7 @@
                 <a href="mailto:{{ site.data.contact.email }}">
 
                   <div>
-                    <img src="images/email-icon.png" class="icon-small" />
+                    <img src="/images/email-icon.png" class="icon-small" />
                   </div>
 
                     <div>
@@ -307,7 +306,7 @@
 
                   <div>
                     <img
-                      src="images/location-icon.png"
+                      src="/images/location-icon.png"
                       class="icon-small"
                     />
                   </div>
@@ -324,7 +323,7 @@
                 >
 
                   <div>
-                    <img src="images/ig-icon.png" class="icon-small" />
+                    <img src="/images/ig-icon.png" class="icon-small" />
                   </div>
 
                   <div>
