--- a/_layouts/listing.html
+++ b/_layouts/listing.html
@@ -235,7 +235,11 @@
                       CHECK AVAILABILITY
                     </a>
 
-                    <a id="print-brochure" href="#" class="cool-button">
+                    <a
+                      href="#"
+                      id="print-brochure"
+                      class="cool-button"
+                    >
                       PRINT BROCHURE
                     </a>
 
